i changed my img

--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -355,8 +355,8 @@
                 <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/Diaa.jpeg" class="img-responsive img-circle" alt="" style="height: 239px; width: 239px; max-width: 200%">
-                        <h4>Diaa Nofal</h4>
+                        <img src="img/team/Diaa.jpg" class="img-responsive img-circle" alt="" style="height: 239px; width: 239px; max-width: 200%">
+                      <h4>Diaa Nofal</h4>
                         <p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
