--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -61,7 +61,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Project name</a>
+              <a class="navbar-brand" href="#">Pronnector</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
@@ -80,6 +80,7 @@
                     <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
+				<li><a href="pages/loging.html">Login</a></li>
               </ul>
             </div>
           </div>
