--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -82,7 +82,7 @@
                     <li><a href="#">One more separated link</a></li>
                   </ul>
                 </li>
-				<li><a href="pages/loging.html">Login</a></li>
+				<li><a href="pages/login.html">Login</a></li>
               </ul>
             </div>
           </div></nav></div>
