--- a/Front-end/pages/sign-up.html
+++ b/Front-end/pages/sign-up.html
@@ -9,12 +9,12 @@
 
 
 <!--[if lt IE 9]>
-<script src="js/html5shiv.js"></script>
+<script src="../js/html5shiv.js"></script>
 <![endif]-->
 
-<link href="css/normalize.css" rel="stylesheet"/>
-<link href="css/jquery-ui.css" rel="stylesheet"/>
-<link href="css/jquery.idealforms.min.css" rel="stylesheet" media="screen"/>
+<link href="../css/normalize.css" rel="stylesheet"/>
+<link href="../css/jquery-ui.css" rel="stylesheet"/>
+<link href="../css/jquery.idealforms.min.css" rel="stylesheet" media="screen"/>
 
 <style type="text/css">
 body{font:normal 15px/1.5 Arial, Helvetica, Free Sans, sans-serif;color: #222;background:url(pattern.png);overflow-y:scroll;padding:60px 0 0 0;}
@@ -97,9 +97,9 @@ body{font:normal 15px/1.5 Arial, Helvetica, Free Sans, sans-serif;color: #222;ba
 </div>
 
 
-<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="js/jquery-ui.min.js"></script>
-<script type="text/javascript" src="js/jquery.idealforms.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/jquery-ui.min.js"></script>
+<script type="text/javascript" src="../js/jquery.idealforms.js"></script>
 <script type="text/javascript">
 var options = {
 
