--- a/Front-end/index.html
+++ b/Front-end/index.html
@@ -83,6 +83,7 @@
                   </ul>
                 </li>
 				<li><a href="pages/login.html">Login</a></li>
+                <li><a href="pages/sign-up.html">Sign Up</a></li>
               </ul>
             </div>
           </div></nav></div>
