--- a/Front-end/Creat project-details.html
+++ b/Front-end/Creat project-details.html
@@ -8,15 +8,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <style>
-  body {
+   body {
       font: 20px Montserrat, sans-serif;
       line-height: 1.8;
       backgroung-color: #ffffff;
   }
   
   body .details {
-    margin: 100px 100px ;}
-  .details label {
+    margin: 100px 300px 100px 300px ;}
+  
+    .details label {
      text-align-last: left; ;}
 	
  p {font-size: 16px;}
@@ -54,91 +55,66 @@
       color: #1abc9c !important;
   }
   </style>
-</head>
+  </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-default">
-  <div class="container">
+ <p></p><p></p>
+ <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <img src="https://github.com/Diaa1/T2Team-Repository/blob/master/Front-end/img/favicon/logo.png?raw=true" alt="Cinque Terre" width="150" height="50">
+     <img src="https://github.com/Diaa1/T2Team-Repository/blob/master/Front-end/img/favicon/logo.png?raw=true" alt="Cinque Terre" width=     "150" height="60"/>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
+      <p></p><p></p>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Home</a></li>
         <li><a href="#">New Idea</a></li>
         <li><a href="#">Explore</a></li>
-<li><div class="btn-group">
-  <button type="button" class="btn btn-primary">Profile</button>
-    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-
-    <span class="caret"></span>
-  
-  <ul class="dropdown-menu" role="menu">
-    <li><a href="#">Settings</a></li>
-    <li><a href="#">My projects</a></li>
-  </ul>
-</button></div></li>
+        <li>
+          <p></p>
+          <button type="button" class="btn btn-primary">Profile</button>
+        </li>
       </ul>
-    </div>
   </div>
-</nav>
-
-<!-- First Container -->
-<div class="container-fluid bg-1 text-center">
-  
-  
-  
-</div>
-
-<!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  
-  <div class="btn-group btn-group-lg">
+  <p></p><p></p>  
+ </div>
+ <div class="container-fluid bg-1 text-center">
+ </div>
+ <div class="container-fluid bg-2 text-center">
   <button type="button" class="btn btn-primary">Details</button>
   <button type="button" class="btn btn-primary">Preview</button>
-  
-  
-</div><p></p><p></p>
-  
-</div>
-
-<!-- Third Container (Grid) -->
-<div class="container-fluid bg-3 text-center">    
-  <br>
-  <div class="row">
-    
-
-<div class="details">
+  <p></p><p></p>
+ </div>
+ 
+ <div class="details">
      
+
   <div>
-    <label for="exampleInputFile">upload photo</label>
-    <input type="file" id="exampleInputFile">
-  </div>
-  <div>
-  <label for="comment">Creator Name:</label>
+  <label for="comment">Idea Name:</label>
   <textarea class="form-control" rows="1" id="comment"></textarea>
   </div>
+  <p></p><p></p>
+  <div>
+  <label for="exampleInputFile">upload photo</label>
+  <input type="file" id="exampleInputFile">
+  </div>
+  <p></p><p></p>
   <div>
   <label for="comment">Description:</label>
   <textarea class="form-control" rows="2" id="comment"></textarea>
-  </div>
+  </div> 
+  <p></p><p></p>
+  
   <div>
   <label for="comment">Funding Goal:</label>
   <textarea class="form-control" rows="1" id="comment"></textarea>
-  </div> 
+  </div>
+  <p></p><p></p> 
   <div> 
   <label for="comment">Requirments:</label>
   <textarea class="form-control" rows="1" id="comment"></textarea>
   </div>
+  <p></p><p></p>
   <div class="checkbox">
-  </div>
-   <div class="checkbox">
     <label>
       <input type="checkbox"> Check me out
     </label>
@@ -150,12 +126,15 @@
   </div>
  
  </div>
-
-<!-- Footer -->
-<footer class="">
-   
-</footer>
-
-
-
-	</body></html>
+ 
+ <div class="container-fluid bg-1 text-center">
+ </div>
+ <div class="container-fluid bg-2 text-center">
+  <p>@T2team</p><p>Facebookk</p><p>Twitter</p><p></p>
+ 
+ </div>
+ 
+ 
+ 
+ </body>
+  
